# WorldEdit-BE

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  manifest.json  prepareLib.cmd  runbds.bat  tooth.json  xmake.lua
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-template.yml  build.yml  release.yml
FastNoise/: FastNoiseLite.h
FastNoise2/lib/: FastNoise.lib  FastNoiseD.lib
Template/: Plugin.cpp  Version.h  WorldEdit.cpp  WorldEdit.h  dllmain.cpp
WorldEdit/: Globals.h  Plugin.cpp  Version.h  WorldEdit.cpp  WorldEdit.h  dllmain.cpp
bresenham/: bresenham.h  loft.js
core/brush/: Brush.cpp  Brush.h  Brushs.h  ClipboardBrush.cpp  ClipboardBrush.h  ColorBrush.cpp  ColorBrush.h  CubeBrush.cpp  CubeBrush.h  CylinderBrush.cpp  CylinderBrush.h  DeformBrush.h  FlatBrush.cpp  FlatBrush.h  GravityBrush.cpp  GravityBrush.h  ImageHeightmapBrush.cpp  ImageHeightmapBrush.h  MixBrush.cpp  MixBrush.h  SmoothBrush.cpp  SmoothBrush.h  SphereBrush.cpp  SphereBrush.h  tool.cpp  tool.h
core/builder/: SimpleBuilder.cpp  SimpleBuilder.h
core/command/: BrushCommand.cpp  BrushCommand.hpp  ClipboardCommand.cpp  ClipboardCommand.hpp  GenerationCommand.cpp  GenerationCommand.hpp  HandToolCommand.cpp  HandToolCommand.hpp  HistoryCommand.cpp  HistoryCommand.hpp  RegionCommand.cpp  RegionCommand.hpp  RegionInfoCommand.cpp  RegionInfoCommand.hpp  RegionOperationCommand.cpp  RegionOperationCommand.hpp  allCommand.cpp  allCommand.hpp
core/data/: GlobalData.cpp  GlobalData.h  PlayerData.cpp  PlayerData.h
core/eval/: Bresenham.cpp  Bresenham.hpp  CppEval.h  Eval.cpp  Eval.h  blur.cpp  blur.hpp
core/filesys/: download.cpp  download.h  file.cpp  file.h
core/image/: Image.cpp  Image.h
core/particle/: Graphics.cpp  Graphics.h  Particle.cpp  Particle.h
core/region/: ConvexRegion.cpp  ConvexRegion.h  CuboidRegion.cpp  CuboidRegion.h  CylinderRegion.cpp  CylinderRegion.h  ExpandRegion.cpp  ExpandRegion.h  LoftRegion.cpp  LoftRegion.h  PolyRegion.cpp  PolyRegion.h  Region.cpp  Region.h  Regions.h  SphereRegion.cpp  SphereRegion.h  changeRegion.cpp  changeRegion.hpp
core/store/: BlockListPattern.cpp  BlockListPattern.h  BlockNBTSet.cpp  BlockNBTSet.hpp  BlockPattern.cpp  BlockPattern.hpp  Clipboard.cpp  Clipboard.hpp  ClipboardPattern.cpp  ClipboardPattern.h  GradientPattern.cpp  GradientPattern.h  History.cpp  History.h  Pattern.cpp  Pattern.h
core/string/: StringTool.h
core/subscribe/: player.cpp  player.hpp  server.cpp  server.hpp  subscribeall.hpp
core/tool/: VanillaFuckMojangBlocks.cpp  VanillaFuckMojangBlocks.h  tool.cpp  tool.h
core/utils/: ColorTool.cpp  ColorTool.h  StringTool.h
lodepng/: lodepng.cpp
scripts/: after_build.lua
src/bot/: BotPathfinder.cpp  BotPathfinder.h
src/builder/: Builder.cpp  Builder.h  InplaceBuilder.cpp  InplaceBuilder.h  SimulatedPlayerBuilder.cpp  SimulatedPlayerBuilder.h
src/command/: Command.h  CommandMacro.cpp  CommandMacro.h  Commands.cpp  Commands.h
src/data/: BlockOperationRecord.cpp  BlockOperationRecord.h  ClipboardData.h  Config.h  GradientData.h  GradientManager.cpp  GradientManager.h  History.h  HistoryExample.cpp  HistoryExample.h  HistoryManager.cpp  HistoryManager.h  HistoryRecord.cpp  HistoryRecord.h  HistoryRecordFactory.cpp  HistoryRecordFactory.h  LocalContext.cpp  LocalContext.h  LocalContextManager.cpp  LocalContextManager.h  Operation.cpp  Operation.h  OperationData.cpp  OperationData.h  Operations.h  PlayerContext.cpp  PlayerContext.h  PlayerContextManager.cpp  PlayerContextManager.h  PlayerState.cpp  PlayerState.h  README.md  (+2 more)
(+204 files in other folders)
